Inteligencia Artificial Generación de Prompts / Pre-entrega 2

--- a/pre_entrega2.ipynb
+++ b/pre_entrega2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4bgIyMocSxAfThbsEe2fR",
+      "authorship_tag": "ABX9TyP9ZtsoPaOdpbMfKXtKBWhd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,119 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/diegoalvite/9.1.1.ActividaddelTaller/blob/main/pre_entrega2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Optimización de Rutas Marítimas para la Marina Mercante utilizando IA**\n",
+        "\n",
+        "**Resumen**\n",
+        "\n",
+        "Este proyecto tiene como objetivo desarrollar un sistema de optimización de rutas marítimas basado en datos meteorológicos, tráfico marítimo y restricciones portuarias. Se utilizarán herramientas de inteligencia artificial para procesar datos en tiempo real y generar recomendaciones textuales de rutas y visualizaciones de mapas interactivos. La propuesta busca mejorar la eficiencia, reducir costos y aumentar la seguridad operativa para la marina mercante uruguaya.\n",
+        "\n",
+        "**Índice**\n",
+        "\n",
+        "Introducción\n",
+        "\n",
+        "Objetivos\n",
+        "\n",
+        "Metodología\n",
+        "\n",
+        "Herramientas y Tecnologías\n",
+        "\n",
+        "Implementación\n",
+        "\n",
+        "Resultados\n",
+        "\n",
+        "Conclusiones\n",
+        "\n",
+        "Referencias\n",
+        "\n",
+        "1. Introducción\n",
+        "\n",
+        "La planificación de rutas marítimas eficientes es uno de los desafíos clave para las empresas del sector marítimo. Factores como condiciones meteorológicas cambiantes, tráfico marítimo y restricciones portuarias pueden afectar significativamente los tiempos de navegación, incrementar los costos operativos y aumentar los riesgos para la seguridad.\n",
+        "El presente proyecto propone el desarrollo de un sistema de inteligencia artificial que procese información en tiempo real y genere recomendaciones de rutas óptimas, acompañadas de visualizaciones para la toma de decisiones.\n",
+        "\n",
+        "2. Objetivos\n",
+        "\n",
+        "Objetivo general:\n",
+        "\n",
+        "Optimizar las rutas marítimas de la marina mercante utilizando herramientas de inteligencia artificial basadas en datos meteorológicos, tráfico marítimo y restricciones portuarias.\n",
+        "\n",
+        "Objetivos específicos:\n",
+        "\n",
+        "Generar recomendaciones de rutas mediante modelos de IA de texto-texto.\n",
+        "Crear mapas visuales de rutas seguras utilizando IA de texto-imagen.\n",
+        "Reducir el tiempo y los costos asociados a la planificación manual de rutas.\n",
+        "Mejorar la seguridad operativa al evitar zonas de riesgo.\n",
+        "\n",
+        "3. Metodología\n",
+        "\n",
+        "3.1 Recopilación de Datos\n",
+        "\n",
+        "Se utilizarán datos meteorológicos, de tráfico marítimo y de restricciones portuarias obtenidos de fuentes confiables, como APIs meteorológicas y sitios oficiales de autoridades portuarias.\n",
+        "\n",
+        "3.2 Procesamiento de Datos y Generación de Prompts\n",
+        "\n",
+        "Texto-texto: Utilización de IA para generar recomendaciones detalladas de rutas.\n",
+        "Ejemplo de prompt:\n",
+        "\n",
+        "\"Considerando las siguientes condiciones meteorológicas y restricciones portuarias, genera una recomendación para una ruta desde Montevideo a Buenos Aires.\"\n",
+        "\n",
+        "Texto-imagen: Generación de mapas visuales que identifiquen rutas seguras y zonas de riesgo.\n",
+        "\n",
+        "**Ejemplo de prompt:**\n",
+        "\n",
+        "\"Crea un mapa que muestre las rutas seguras entre Montevideo y Buenos Aires, destacando zonas de alto riesgo por condiciones meteorológicas adversas.\"\n",
+        "\n",
+        "3.3 Visualización de Resultados\n",
+        "\n",
+        "Se mostrarán las rutas recomendadas y las zonas de riesgo a través de gráficos y mapas interactivos.\n",
+        "\n",
+        "4. Herramientas y Tecnologías\n",
+        "\n",
+        "Python: Lenguaje de programación para procesamiento de datos y visualización.\n",
+        "\n",
+        "Jupyter Notebook: Plataforma para el desarrollo y presentación del proyecto.\n",
+        "\n",
+        "BeautifulSoup y Requests: Librerías para la recolección de datos mediante web scraping.\n",
+        "\n",
+        "Matplotlib: Generación de gráficos y mapas de rutas simuladas.\n",
+        "\n",
+        "5. Implementación\n",
+        "\n",
+        "El sistema se implementará en Jupyter Notebook. Se dividirá en tres etapas:\n",
+        "\n",
+        "Recolección de datos meteorológicos y de tráfico marítimo mediante scraping.\n",
+        "\n",
+        "Generación de recomendaciones textuales de rutas usando prompts simulados.\n",
+        "\n",
+        "Visualización de rutas seguras a través de gráficos y mapas interactivos.\n",
+        "\n",
+        "6. Resultados\n",
+        "\n",
+        "Texto-texto: Generación de recomendaciones claras y útiles para la planificación de rutas.\n",
+        "\n",
+        "Texto-imagen: Creación de mapas visuales que destacan zonas de riesgo y rutas seguras, facilitando la toma de decisiones operativas.\n",
+        "\n",
+        "7. Conclusiones\n",
+        "\n",
+        "La utilización de IA en la optimización de rutas marítimas proporciona múltiples beneficios, incluyendo reducción de costos, mejora de la seguridad y toma de decisiones más eficiente. Este proyecto demuestra cómo las herramientas de IA pueden ser adaptadas para resolver problemas reales en el sector marítimo, mejorando la eficiencia operativa de la marina mercante.\n",
+        "\n",
+        "8. Referencias\n",
+        "\n",
+        "Administración Nacional de Puertos de Uruguay\n",
+        "\n",
+        "OpenWeather API\n",
+        "\n",
+        "Documentación oficial de OpenAI\n",
+        "\n",
+        "Bibliografía técnica sobre navegación y seguridad marítima\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hpmg_ZIObmne"
+      }
     },
     {
       "cell_type": "code",
@@ -79,6 +192,13 @@
       "source": [
         "pip install openai beautifulsoup4 matplotlib pandas requests"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "PfiO6rd1afXv"
+      }
     },
     {
       "source": [
@@ -176,24 +296,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "PGf0MbTvVgF3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tZLP5g86VgQZ"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
